NetworkPolicy/nodejs-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-v1-deployment
  labels:
    app: nodejs-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-v1
  template:
    metadata:
      labels:
        app: nodejs-v1
    spec:
      containers:
      - name: nodejs
        image: gasbugs/nodejs:v1
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-v1-service
spec:
  selector:
    app: nodejs-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
