NetworkPolicy/nodejs-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-v2-deployment
  labels:
    app: nodejs-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-v2
  template:
    metadata:
      labels:
        app: nodejs-v2
    spec:
      containers:
      - name: nodejs
        image: gasbugs/nodejs:v2
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-v2-service
spec:
  selector:
    app: nodejs-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
